@@ -70,6 +70,7 @@ version <next>:
 - Windows Televison (WTV) demuxer
 - FFmpeg metadata format muxer and demuxer
 - SubRip (srt) subtitle decoder
+- floating-point AC-3 encoder added
 
 
 version 0.6:
